--- a/src/modules/tables/containers/tables/tables.component.html
+++ b/src/modules/tables/containers/tables/tables.component.html
@@ -1,3 +1,4 @@
 <sb-layout-dashboard
-    ><sb-dashboard-head title="Page Test" [hideBreadcrumbs]="false"></sb-dashboard-head
-    ></sb-layout-dashboard>
+    ><sb-dashboard-head title="Page Test" [hideBreadcrumbs]="false"></sb-dashboard-head>
+
+</sb-layout-dashboard>
