--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -9,7 +9,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                 <a class="nav-link" [routerLink]="['/add']" routerLinkActive="router-link-active">Add Identity</a>
+                 <a class="nav-link" [routerLink]="['/add']" routerLinkActive="router-link-active">My Identity</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/notification']" routerLinkActive="router-link-active">Notifications</a>
