--- a/src/app/pages/secret/secret.component.html
+++ b/src/app/pages/secret/secret.component.html
@@ -8,10 +8,10 @@
     <form>
         <div class="form-group">
           <label for="secretphrase">Secret Phrase</label>
-          <textarea class="form-control" style="font-size:24px;" id="secretphrase" rows="1"></textarea>
+          <textarea class="form-control" style="font-size:24px;" id="secretphrase" rows="1" placeholder="useless quantum pear dash rather patrol cricket lobster raccoon chaos broken trick"></textarea>
            
           <label for="privatekey">Private Key</label>
-          <textarea class="form-control" id="privatekey" style="font-size:24px;" rows="1"></textarea>
+          <textarea class="form-control" id="privatekey" style="font-size:24px;" rows="1" placeholder="57C16BE303B41405E6FA265C6F510E7C821DD08D6B70FA948EA8F8D45A632F54"></textarea>
         </div>
       </form>
     <p class="lead">
@@ -19,6 +19,8 @@
     </p>
    
   </div>
+
+  
 
 
 
