--- a/src/app/pages/notification/notification.component.html
+++ b/src/app/pages/notification/notification.component.html
@@ -1,22 +1,48 @@
 <br>
-<br>
-<br>
+
 
 <div class="jumbotron" style="background:transparent !important">
     <h1 class="display-5">Notifications</h1><br>
     <p class="lead">See which companies are willing to consume you data.</p>
     <hr class="my-4">
+ 
 
-    <section>
-        <figure>
+        <section>
+        <figure style="text-align: center;">
             <img src="../../../assets/notifications.svg" width="290px" height="290px">
         </figure>
-    
-        <div class="texts">
+    </section>
+    <div class="table-responsive">
+
+        <p class="lead">There are requests for approval to view your information.</p>
+        <br>
+                <table class="table table-hover" style="text-align: center;">
+                    <thead class="table-primary">
+                      <tr>
+                        <th scope="col">Name input</th>
+                        <th scope="col">Information</th>
+                        <th scope="col">Requesting company</th>
+                        <th scope="col">Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Name</td>
+                        <td>Danilo Falco</td>
+                        <td>Binance</td>
+                        <td><button type="submit" class="btn btn btn-success">Approve</button>&nbsp;<button type="submit" class="btn btn btn-danger">Decline</button></td>
+                      </tr>
+                     
+                    </tbody>
+                  </table>
+                </div>
+                <hr class="my-4">
+               
+        <!-- <div class="texts">
             <p>Oops! there are no consumer notifications at this time, as soon as something arrives I will let you know!</p>
           
-        </div>
-    </section>
+        </div> -->
+    
     
   </div>
 
