Complete Project for presentation

--- a/src/app/pages/add/add.component.html
+++ b/src/app/pages/add/add.component.html
@@ -60,6 +60,7 @@
                     <td>Name input</td>
                     <td>Information</td>
                     <td>Link image</td>
+                    <td>Value for the validator</td>
                 </tr>
             </thead>
             <tbody>
@@ -68,10 +69,13 @@
                         <input type="text" name="name" class="form-control" value="Example: Name" disabled />
                     </td>
                     <td class="col-sm-4">
-                        <input type="mail" name="mail"  class="form-control" value="Example: Danilo Falco" disabled/>
+                        <input type="mail" name="information"  class="form-control" value="Example: Danilo Falco" disabled/>
                     </td>
-                    <td class="col-sm-3">
-                        <input type="text" name="phone"  class="form-control" value="Example: http://web3.com/image.png/" disabled/>
+                    <td class="col-sm-2">
+                        <input type="text" name="linkimage"  class="form-control" value="Example: http://web3.com/image.png/" disabled/>
+                    </td>
+                    <td class="col-sm-2">
+                        <input type="text" name="valuevalidator"  class="form-control" value="ETH 0.0003002" disabled/>
                     </td>
                     <td class="col-sm-1"><a class="deleteRow"></a>
                        
